fix:register button alignment

--- a/src/pages/reportAccidentPage/report-accident.css
+++ b/src/pages/reportAccidentPage/report-accident.css
@@ -57,7 +57,7 @@ textarea {
 
 .btn-send {
   background-color: #e72020;
-  padding: 0.625rem 8.125rem;
+  padding: 0.625rem 0rem;
   display: block;
   margin: auto;
   color: #fff;
